# rust-linenoise

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.markdown  build.rs  index.html  search-index.js
examples/: linenoise_example.rs
linenoise/: fn.add_completion.html  fn.clear_screen.html  fn.history_add.html  fn.history_line.html  fn.history_load.html  fn.history_save.html  fn.history_set_max_len.html  fn.input.html  fn.print_key_codes.html  fn.set_callback.html  fn.set_multiline.html  index.html  sidebar-items.js  type.CompletionCallback.html  type.Completions.html
linenoise/ffi/: enum.Struct___sFILEX.html  fn.linenoise.html  fn.linenoiseAddCompletion.html  fn.linenoiseClearScreen.html  fn.linenoiseHistoryAdd.html  fn.linenoiseHistoryLine.html  fn.linenoiseHistoryLoad.html  fn.linenoiseHistorySave.html  fn.linenoiseHistorySetMaxLen.html  fn.linenoisePrintKeyCodes.html  fn.linenoiseSetCompletionCallback.html  fn.linenoiseSetMultiLine.html  index.html  sidebar-items.js  static.__mb_cur_max.html  static.__stderrp.html  static.__stdinp.html  static.__stdoutp.html  static.optarg.html  static.opterr.html  static.optind.html  static.optopt.html  static.optreset.html  static.suboptarg.html  static.sys_errlist.html  static.sys_nerr.html  struct.Struct_Unnamed10.html  struct.Struct___sFILE.html  struct.Struct___sbuf.html  struct.Struct_linenoiseCompletions.html  struct.Struct_ttysize.html  type.FILE.html  type._RuneCharClass.html  type.__darwin_blkcnt_t.html  type.__darwin_blksize_t.html  type.__darwin_clock_t.html  type.__darwin_ct_rune_t.html  type.__darwin_dev_t.html  type.__darwin_fsblkcnt_t.html  type.__darwin_fsfilcnt_t.html  (+100 more)
native/: linenoise.c  linenoise.cpp  linenoise.h  win32fixes.h
src/: ffi.rs  lib.rs  linenoise.h
src/linenoise/src/: ffi.rs.html  lib.rs.html
