[package]

name = "linenoise-rust"
version = "0.1.7"
authors = [ "Pierre Baillet <pierre@baillet.name>" ]
build = "build.rs"

homepage = "https://github.com/octplane/rust-linenoise"
documentation = "http://octplane.github.io/rust-linenoise/linenoise/index.html"
repository = "https://github.com/octplane/rust-linenoise"

description = "Simple binding to lib linenoise (readline-like) in rust. linenoise is included."
readme = "README.markdown"
keywords = ["cli", "library", "binding"]
license = "MIT"

[lib]

name = "linenoise"
doctest = false

[[bin]]

name = "linenoise_example"

[build-dependencies]

gcc = "~0.1.0"
