[package]

name = "linenoise-rust"
version = "0.2.0"
authors = [ "Pierre Baillet <pierre@baillet.name>",  ]
links = "linenoise"
build = "build.rs"

homepage = "https://github.com/octplane/rust-linenoise"
documentation = "http://octplane.github.io/rust-linenoise/linenoise/index.html"
repository = "https://github.com/octplane/rust-linenoise"

description = "Simple binding to lib linenoise (readline-like) in rust. linenoise is included."
readme = "README.markdown"
keywords = ["cli", "library", "binding"]
license = "MIT"

[lib]

name = "linenoise"
doctest = false

[dependencies]
libc = "0.2.7"

[build-dependencies]

gcc = "0.3.24"

[[bin]]
# Build the example, but don't include it in documentation.
name = "linenoise_example"
path = "examples/linenoise_example.rs"
doc = false
